[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64"]

[project]
authors = [
    {name = "Simone Chiarella", email = "simonechiarella99@gmail.com"},
]
dependencies = [
    "biopython==1.78",
    "matplotlib==3.8.4",
    "numpy==1.26.4",
    "pandas==2.1.4",
    "rcsbsearchapi==1.6.0",
    "requests==2.32.3",
    "rich==13.3.5",
    "scipy==1.13.0",
    "seaborn==0.12.2",
    "torch==2.2.0",
    "transformers==4.44.1",
]
description = "A pipeline for the analisys of protein networks through BERT self-attention"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "ProtACon"
readme = "README.md"
requires-python = "== 3.10"

[project.optional-dependencies]
test = [
    "mypy==1.11.2",
    "pandas-stubs==2.2.2.240909",
    "pytest==7.4.4",
    "pytest-bdd==7.0.0",
    "pytest-pycodestyle==2.3.1",
    "types-requests==2.32.0.20241016",
]

[project.scripts]
ProtACon = "ProtACon.__main__:main"

[tool.pytest.ini_options]
addopts = [
    "--pycodestyle",
    "--gherkin-terminal-reporter",
]
bdd_features_base_dir = "tests/features"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "all_amino_acids",
    "argument_parser",
    "basics",
    "dict_1_to_3",
    "dict_3_to_1",
    "CA_Atom",
    "config_parser",
    "download_pdb",
    "extract_CA_atoms",
    "get_sequence_to_tokenize",
    "load_model",
    "Logger",
    "raw_attention",
    "preprocess",
]
testpaths = ["tests"]

[tool.setuptools]
packages = ["ProtACon"]

# mypy per-module options:
[[tool.mypy.overrides]]
module = [
    "Bio.PDB.*",
    "mpl_toolkits.axes_grid1",
    "rcsbsearchapi.*",
    "seaborn",
    "scipy.stats",
    "transformers",
]
ignore_missing_imports = true