[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64"]

[project]
authors = [
    {name = "Simone Chiarella", email = "simonechiarella99@gmail.com"},
]
dependencies = [
    "biopython==1.78",
    "matplotlib==3.8.4",
    "numpy==1.26.4",
    "pandas==2.1.4",
    "rcsbsearchapi==1.6.0",
    "requests==2.32.3",
    "rich==13.3.5",
    "scipy==1.13.0",
    "seaborn==0.12.2",
    "torch==2.2.0",
    "transformers==4.45.2",
]
description = "A pipeline for the analysis of peptide sequences through ProtBert self-attention"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "ProtACon"
readme = "README.md"
requires-python = "== 3.10"

[project.optional-dependencies]
test = [
    "mypy==1.11.2",
    "pandas-stubs==2.2.2.240909",
    "pytest==7.4.4",
    "pytest-bdd==7.0.0",
    "pytest-mock==3.10.0",
    "pytest-pycodestyle==2.3.1",
    "responses==0.25.0",
    "types-requests==2.32.0.20241016",
]

[project.scripts]
ProtACon = "ProtACon.__main__:main"

[tool.pytest.ini_options]
addopts = [
    "--pycodestyle",
    "--gherkin-terminal-reporter",
]
bdd_features_base_dir = "tests/features"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "all_amino_acids",
    "amino_acid_df",
    "argument_parser",
    "attention",
    "average_matrices_together",
    "basics",
    "CA_Atom",
    "dict_1_to_3",
    "dict_3_to_1",
    "clean_attention",
    "config_parser",
    "download_pdb",
    "extract_CA_atoms",
    "get_amino_acid_pos",
    "get_attention_to_amino_acid",
    "get_model_structure",
    "get_sequence_to_tokenize",
    "include_att_to_missing_aa",
    "load_Bert",
    "Logger",
    "preprocess",
    "raw_attention",
    "sum_attention_on_columns",
    "sum_attention_on_heads",
    "threshold_attention",
    "tokens",
]
testpaths = ["tests"]

[tool.setuptools]
packages = ["ProtACon"]

[tool.mypy]
explicit_package_bases = true  # suppress error due to same name modules

# mypy per-module options:
[[tool.mypy.overrides]]
module = [
    "Bio.PDB.*",
    "mpl_toolkits.axes_grid1",
    "rcsbsearchapi.*",
    "seaborn",
    "scipy.stats",
    "transformers",
]
ignore_missing_imports = true